# kyoka

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: build.yml
config/: kyoka.toml
crates/kyoka/: Cargo.toml
crates/kyoka-gateway-queue/: Cargo.toml
crates/kyoka-gateway-queue/src/: lib.rs  main.rs
crates/kyoka-gateway-queue/src/config/: mod.rs  server.rs
crates/kyoka-gateway-queue/src/server/: mod.rs  router.rs
crates/kyoka-setup/: Cargo.toml
crates/kyoka-setup/src/: main.rs
crates/kyoka-shard/: Cargo.toml
crates/kyoka-shard/src/: app.rs  lib.rs  main.rs  queue.rs  router.rs  state.rs
crates/kyoka-shard/src/bot/: handler.rs  mod.rs  state.rs
crates/kyoka-shard/src/bot/cmd/: connect.rs  mod.rs
crates/kyoka-shard/src/cmd/: mod.rs  ping.rs
crates/kyoka-shard/src/config/: bot.rs  metrics.rs  mod.rs  shard.rs
crates/kyoka-shard/src/metrics/: mod.rs  router.rs  server.rs
crates/kyoka-shard/src/process/: mod.rs
crates/kyoka/src/: lib.rs  metrics.rs  setup.rs
crates/kyoka/src/cmd/: mod.rs  ping.rs
crates/kyoka/src/config/: bot.rs  defaults.rs  mod.rs  sentry.rs  structs.rs
crates/kyoka/src/sentry/: mod.rs
crates/kyoka/src/util/: env.rs  mod.rs  sensitive.rs  twilight.rs
dev/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/shard/: Dockerfile
src/: lib.rs  setup.rs  state.rs
src/cmd/: join.rs  mod.rs  ping.rs
src/config/: defaults.rs  mod.rs  util.rs
src/util/: mod.rs  twilight.rs
