[package]
name = "kyoka"
version = "0.0.1-alpha.0"
authors = ["memothelemo <me@memothelemo.xyz>"]
edition = "2021"
license = "AGPL-2.0"
rust-version = "1.74.0"

[dependencies]
async-trait = "0.1.74"
cfg-if = "1.0.0"
dotenvy = "0.15.7"
error-stack = { git = "https://github.com/memothelemo/error-stack", rev = "3c4b10" }
figment = { version = "0.10.12", features = ["env", "toml"] }
futures = "0.3.29"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_test = "1.0.176"
songbird = { version = "0.4.0", features = ["twilight"] }
symphonia = { version = "0.5.3", features = ["aac", "mp3", "isomp4", "alac"] }
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
validator = { git = "https://github.com/capwat/backend", rev = "e566112" }
yansi = "1.0.0-rc.1"
