[package]
name = "kyoka-gateway-queue"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actix-web.workspace = true
# actix-web-prom.workspace = true
error-stack.workspace = true
kyoka.workspace = true
futures.workspace = true
serde.workspace = true
sentry.workspace = true
sentry-actix.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
twilight-gateway-queue.workspace = true
twilight-http.workspace = true
