[package]
name = "kyoka-setup"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
error-stack.workspace = true
futures.workspace = true
kyoka.workspace = true
thiserror.workspace = true
tokio.workspace = true
yansi.workspace = true
