[package]
name = "kyoka-shard"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
error-stack.workspace = true
futures.workspace = true
kyoka.workspace = true
sentry.workspace = true
songbird.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
# tracing-subscriber.workspace = true
twilight-http.workspace = true
twilight-gateway.workspace = true
twilight-gateway-queue.workspace = true
# twilight-interactions.workspace = true
twilight-model.workspace = true
url.workspace = true
# twilight-util.workspace = true

actix-web.workspace = true
actix-web-prom.workspace = true
prometheus.workspace = true
sentry-actix.workspace = true
