[package]
name = "kyoka"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
gateway-queue = []

[dependencies]
dotenvy.workspace = true
error-stack.workspace = true
futures.workspace = true
sentry.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# twilight-gateway.workspace = true
# twilight-http.workspace = true
# twilight-interactions.workspace = true
# twilight-model.workspace = true

[dev-dependencies]
serde_test.workspace = true
